# extract-infos-from-mail

./: .gitignore  README.md  pyproject.toml  requirements.txt
extract_infos_from_mail/: main.py
extract_infos_from_mail/utils/: clean_file.py  initialisation.py  isValidEmail.py  open_directory_dialog.py  read_msg_files.py  read_txt_file.py  select_directory.py  select_excel_file.py  write_to_excel.py
extract_infos_from_mail/utils/constants/: HEADERS.py
