[tool.poetry]
name = "extract-infos-from-mail"
version = "0.1.0"
description = ""
authors = ["Samuel JEAN <samuel@maianoinfo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<3.13"
pyinstaller = "^6.5.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
